Agregados errores form, validación horario turnos y link al inicio de er

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,13 @@
 # Directories #
 ###############
 logs/
+.git/
+geoffroea/controles/migrations/
 
 # Specific files #
 ##################
 git-remove-history
+geoffroea/.schema
 
 # OS generated files #
 ######################
